c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/multi_storage_class_var.c
int main(void) {
    /* a variable can't have more than one storage class */
    static extern int foo = 0;
    return foo;
}